# aloha_sim

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
aloha_sim/: run_eval.py  task_suite.py  viewer.py
aloha_sim/scripts/: aloha_sim_openpi.py
aloha_sim/tasks/: blocks_spelling.py  bowl_on_rack.py  desktop_wrap_headphone.py  dining_place_in_container.py  drawer_open.py  hand_over.py  laptop_close.py  marker_remove_lid.py  tools_in_caddy.py  towel_fold_in_half.py
aloha_sim/tasks/base/: desktop.py  dining.py  dish_on_rack.py  drawer.py  laptop.py  marker.py  tools.py  towel.py
aloha_sim/tasks/test/: aloha2_task_test.py  blocks_spelling_test.py  desktop_test.py  dining_test.py  dish_on_rack_test.py  drawer_test.py  hand_over_test.py  laptop_test.py  marker_test.py  tools_test.py  towel_test.py
